--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
   </head>
   <body>
-    <div class="site-logo">Rhytm</div>
+    <div class="site-logo">rhythm</div>
     <div class="navbar">
       <div class="site-info">03.05.2021</div>
     </div>
